# intro-to-actix-htmx

./: Cargo.toml  Dockerfile  LICENSE  README.md  index.html  schedules.html
src/: data.rs  data_json.rs  db.rs  index.rs  main.rs  models.rs
templates/: head.html  index.html  master_layout.html  schedule_data.html  script.html  stations_data.html
