[package]
name = "actix-htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
askama = "0.12.1"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"] }
dotenv = "0.15"
chrono = "0.4.35"